# otel-journal-gatewayd-forwarder

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Containerfile.e2e  PLAN.md  README.md  Taskfile.yml  config.example.toml  otel-journal-gatewayd-forwarder.service
e2e/: Containerfile  config.toml  continuation-test.sh  e2e-test.service  otel-collector-config.yaml  otel-collector.service  run-e2e-test.sh  run-in-container.sh  test-log-generator.service  test-log-generator.sh  verify_continuation.py
e2e/distros/: al2023.sh  debian.sh  fedora.sh
src/: collector.rs  config.rs  cursor.rs  journal.rs  main.rs  metrics.rs  otlp.rs
