[package]
name = "otel-journal-gatewayd-forwarder"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Pull-based journal log forwarder. Collects logs from remote systemd-journal-gatewayd endpoints and forwards them to an OTLP-compatible backend."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourname/otel-journal-gatewayd-forwarder"
keywords = ["systemd", "journal", "otlp", "opentelemetry", "logging"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humantime = "2"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
# wiremock requires nightly features in newer versions
# Use for integration testing when needed

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
