[package]
name = "otel-journal-gatewayd-forwarder"
version = "0.2.0"
edition = "2024"
rust-version = "1.96.1"
authors = ["Shedrach O. Okonofua <shedrach@shdr.ch>"]
description = "Pull-based journal log forwarder. Collects logs from remote systemd-journal-gatewayd endpoints and forwards them to an OTLP-compatible backend."
license = "MIT OR Apache-2.0"
repository = "https://github.com/shedrachokonofua/otel-journal-gatewayd-forwarder"
keywords = ["systemd", "journal", "otlp", "opentelemetry", "logging"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humantime = "2"
thiserror = "2"
parking_lot = "0.12"

signal-hook = "0.3"
sd-notify = "0.4"

[target.'cfg(unix)'.dependencies]
# libc is intentionally avoided; use signal-hook for signal handling

[dev-dependencies]
tempfile = "3"
# wiremock requires nightly features in newer versions
# Use for integration testing when needed

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
